2008-08-27  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/icydemux/gsticydemux.c:
	  Small docs fix: in the example pipeline, we need to pass
	  iradio-mode=true to the source, so the server actually sends
	  an ICY stream.

2008-08-26  Michael Smith <msmith@songbirdnest.com>

	* sys/osxaudio/gstosxaudio.c:
	  Oops. Revert more completely.

2008-08-26  Michael Smith <msmith@songbirdnest.com>

	* sys/osxaudio/gstosxaudio.c:
	  Revert accidental element rename from testing.

2008-08-27  Jan Schmidt  <jan.schmidt@sun.com>

	* gst-plugins-good.doap:
	Pull in 0.10.10 doap entry from release branch

2008-08-27  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Update version number to reflect 0.10.10 release from
	branch.

2008-08-26  Michael Smith <msmith@songbirdnest.com>

	* sys/osxaudio/Makefile.am:
	* sys/osxaudio/gstosxaudio.c:
	* sys/osxaudio/gstosxaudiosink.c:
	* sys/osxaudio/gstosxaudiosink.h:
	* sys/osxaudio/gstosxaudiosrc.c:
	* sys/osxaudio/gstosxaudiosrc.h:
	* sys/osxaudio/gstosxringbuffer.c:
	* sys/osxaudio/gstosxringbuffer.h:
	  Rewrite caps setting and ring buffer initialisation.
	  Previously we never told CoreAudio what format we were going to send it,
	  so it only worked due to luck, and not at all on some hardware.
	  Now we explicitly advertise what formats the hardware supports, and then
	  configure the selected one correctly.

2008-08-26  Stefan Kost  <ensonic@users.sf.net>

	* sys/v4l2/gstv4l2object.c:
	* sys/v4l2/gstv4l2src.c:
	* sys/v4l2/gstv4l2src.h:
	* sys/v4l2/v4l2_calls.c:
	* sys/v4l2/v4l2src_calls.c:
	  Fix memory leaks. Small code cleanups : No need for empty _init(). No
	  need to memset instance structures. Some more FIXME's and comments.

2008-08-26  Stefan Kost  <ensonic@users.sf.net>

	* tests/icles/.cvsignore:
	  Ignore more.

2008-08-26  Stefan Kost  <ensonic@users.sf.net>

	* gst/goom/.cvsignore:
	* gst/goom2k1/.cvsignore:
	  Ignore files.

2008-08-26  Stefan Kost  <ensonic@users.sf.net>
